--- a/style.css
+++ b/style.css
@@ -2,7 +2,28 @@
    margin: 0;
 }
 body {margin: 0;
-background-color: #54a0ff;}
+background-color: #dfe6e9;}
 
 h1 {color:#EA2027;
+}
+
+p {color:#EE5A24;
+   padding-left: 20px;
+   margin-top: 20px;
+}
+
+.container {
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+header {
+	height: 80px;
+	background-color: #b2bec3;
+}
+header h1 {
+	text-align: center;
+	padding-top: 10px;
+
 }
